[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["denis <deni_95@list.ru>"]
readme = "README.md"
packages = [{include = "django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
